add scope
