# api/user.go
@@ -10,37 +10,37 @@ import (
 )
 
 type UserHandler struct {
+	scopeService  services.IScopeService
 	userService   services.IUserService
 	jwtMiddleware middlewares.IJWTMiddleware
 }
 
-func NewUserHandler(userService services.IUserService, jwtMiddleware middlewares.IJWTMiddleware) *UserHandler {
-	return &UserHandler{userService, jwtMiddleware}
+func NewUserHandler(scopeService services.IScopeService, userService services.IUserService, jwtMiddleware middlewares.IJWTMiddleware) *UserHandler {
+	return &UserHandler{scopeService, userService, jwtMiddleware}
 }
 
 func (h *UserHandler) SetupRoutes(r *gin.Engine) {
 	userRoutes := r.Group("/users", h.jwtMiddleware.RequireScope("user:manage"))
 	{
-		userRoutes.PUT("/update/role", h.UpdateRole)
+		userRoutes.POST("/create", h.Create)
 		userRoutes.PUT("/update/scope", h.UpdateScope)
 		userRoutes.DELETE("/delete", h.Delete)
 	}
 }
 
-// UpdateRole godoc
-// @Summary Update a user's role
-// @Description Update role of a user (admin only)
+// CreateUser godoc
+// @Summary Create a new user
+// @Description Create a user
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param body body dto.UpdateRoleRequest true "User ID and new role"
-// @Success 200 {object} dto.APIResponse "Role updated successfully"
+// @Param body body dto.CreateUserRequest true "User creation request"
+// @Success 201 {object} dto.APIResponse "New user created successfully"
 // @Failure 400 {object} dto.APIResponse "Bad request"
 // @Failure 500 {object} dto.APIResponse "Internal server error"
-// @Security BearerAuth
-// @Router /users/update/role [put]
-func (h *UserHandler) UpdateRole(c *gin.Context) {
-	var req dto.UpdateRoleRequest
+// @Router /users/create [post]
+func (h *UserHandler) Create(c *gin.Context) {
+	var req dto.CreateUserRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, dto.APIResponse{
 			Success: false,
@@ -51,20 +51,31 @@ func (h *UserHandler) UpdateRole(c *gin.Context) {
 		return
 	}
 
-	if err := h.userService.UpdateRole(c.Request.Context(), req.UserId, req.Role); err != nil {
+	scopes, err := h.scopeService.FindMany(c.Request.Context(), req.Scopes)
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, dto.APIResponse{
 			Success: false,
 			Code:    "INTERNAL_SERVER_ERROR",
-			Message: "Failed to update user role",
+			Message: "Failed to find scopes",
 			Error:   err.Error(),
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, dto.APIResponse{
+	_, err = h.userService.Create(req.Username, req.Password, req.Email, scopes)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, dto.APIResponse{
+			Success: false,
+			Code:    "INTERNAL_SERVER_ERROR",
+			Message: "Failed to register user",
+			Error:   err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusCreated, dto.APIResponse{
 		Success: true,
-		Code:    "ROLE_UPDATED",
-		Message: "User role updated successfully",
+		Code:    "USER_CREATED",
+		Message: "New user created successfully",
 	})
 }
 
@@ -92,7 +103,18 @@ func (h *UserHandler) UpdateScope(c *gin.Context) {
 		return
 	}
 
-	if err := h.userService.UpdateScope(c.Request.Context(), req.UserId, req.Scope, req.IsAdded); err != nil {
+	scope, err := h.scopeService.FindOne(c.Request.Context(), req.Scope)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, dto.APIResponse{
+			Success: false,
+			Code:    "INTERNAL_SERVER_ERROR",
+			Message: "Failed to find scope",
+			Error:   err.Error(),
+		})
+		return
+	}
+
+	if err := h.userService.UpdateScope(c.Request.Context(), req.UserId, scope, req.IsAdded); err != nil {
 		c.JSON(http.StatusInternalServerError, dto.APIResponse{
 			Success: false,
 			Code:    "INTERNAL_SERVER_ERROR",
@@ -104,7 +126,7 @@ func (h *UserHandler) UpdateScope(c *gin.Context) {
 
 	c.JSON(http.StatusOK, dto.APIResponse{
 		Success: true,
-		Code:    "SCOPE_UPDATED",
+		Code:    "USER_SCOPE_UPDATED",
 		Message: "User scope updated successfully",
 	})
 }
