# dto/scope.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateScopeRequest struct {
+	ScopeName string `json:"scope_name" binding:"required"`
+}
